2002-04-30  Tom Tromey  <tromey@redhat.com>

	* gnu/testlet/java/io/BufferedReader/boundary.java: New file.

2002-04-17  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/net/InetAddress/InetAddressTest.java (test_Basics):
	If machine has multiple interfaces address array can have multiple
	entries.

	* gnu/testlet/java/lang/System/getProperty.java: New class.

2002-04-15  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/text/AttributedCharacterIterator/CharItImpl.java:
	New package private class.
	* gnu/testlet/java/text/AttributedCharacterIterator/implement.java:
	Uses CharItImpl.

2002-04-15  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/util/AbstractMap/AcuniaAbstractMapTest.java:
	Remove inner classes.
	* gnu/testlet/java/util/AbstractMap/EIterator.java: New class.
	* gnu/testlet/java/util/AbstractMap/ESet.java: New class.
	* gnu/testlet/java/util/AbstractMap/Entry.java: New class.

2002-04-15  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/io/PipedStream/close.java: Use harness.debug().

2002-04-14  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/net/URLConnection/URLConnectionTest.java:
	(test_URLConnection): getInputStream() and getOutputStream() should
	throw UnknownServiceException. Make toString check less strict.
	sourceware.cygnus.com -> sources.redhat.com.
	Don't depend on order of HeaderFields.

2002-04-07  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/util/HashMap/AcuniaHashMapTest.java
	(test_HashMap(): new HashMap(10,1.5f) has a loadFactor of 1.5f.
	(test_entrySet): it.hasNext after hm.remove should throw
	ConcurrentModificationException. setValue through iterator of
	entrySet on a HashMap should succeed.

2002-04-06  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/util/AbstractList/AcuniaAbstractListTest.java
	(test_iterator): Second hasNext() ConcurrentModificationException
	check removed.
	(add): Only update modCount when edit == true.
	(set): Never update modCount.
